# freelingo-agent

./: .gitignore  LANGGRAPH_WORKFLOW_README.md  README.md  pyproject.toml  pytest.ini  requirements.in  requirements.txt  test_transcript.py  test_transcript_logic.py  test_transcript_simple.py
public/: login.html
scripts/: populate_custom_words.py  setup_env.py
sql/: freelingo.sql  language_tutor.sql
src/: config.py  main.py
src/agents/: agents_config.py  dialogue_agent.py  words_agent.py
src/api/: auth.py  dialogue.py  known_words.py  main.py  progress.py  voice.py  words.py
src/db/: dialogue_session.py  known_words.py  progress.py  supabase.py  words.py
src/freelingo_agent/: __init__.py  config.py  main.py
src/models/: dialogue_model.py  dialogue_session.py  known_words.py  transcript_model.py  user.py  user_session.py  words_model.py
src/services/: auth_service.py  dialogue_service.py  dialogue_session_service.py  known_words_service.py  lesson_service.py  llm_service.py  user_session_service.py  words_service.py
src/streamlit_app/: main.py
src/utils/: firebase_admin.py  firebase_auth.py
tests/db/: test_known_words.py  test_words.py
tests/fixtures/: known_words.json  transcript_10_turns.json
tests/integration/: test_dialogue_turn_flow.py  test_graph_workflow.py  test_graph_workflow_transcript.py  test_known_words_flow.py  test_workflow.py
tests/models/: test_transcript_model.py
tests/services/: test_feedback_agent.py  test_llm_service.py  test_planner_agent.py  test_referee_agent.py  test_transcript.py  test_transcript_logic.py  (+2 more)
(+34 files in other folders)
